src/test/deca/syntax/valid/sansObjet/noOperation.deca
// Description:
//    Programme avec un point virgule dans listinst (noOperation)
//
// Resultats:
//    Correct
//
// Historique:
//    cree le 30/12/2023
{
  int a = 1 ;
  ;
  print("Correct");
}